# trunk-recorder

./: .gitignore  docker-compose.yml  pyproject.toml
config/: README.md  analog.tsv  config.json  digital.tsv  rr-to-tg.py  sources.py  svrcs-rr.tsv  svrcs-talkgroups.csv
recorder/: Dockerfile  Makefile  README.md
sync/: Cargo.toml  Dockerfile  Makefile
sync/src/: main.rs
