[tool.poetry]
name = "trunk-recorder"
version = "0.1.0"
description = ""
authors = ["Nathan Howell <nathan.d.howell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
z3-solver = "^4.8.10"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
